# HelixIR

./: .gitignore  README.md  demo.ipynb  pyproject.toml
.github/workflows/: ci.yml
dashboard/: index.html  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css  types.ts
dashboard/src/components/: BenchmarkTable.tsx  GraphView.tsx  PassPanel.tsx  RooflineChart.tsx
dashboard/src/hooks/: useWebSocket.ts
examples/: kernel_compare.py  profile_demo.py  sharding_demo.py
helix/: __init__.py  backward.py  cli.py  diagnostics.py  jupyter.py  server.py  sharding.py
helix/analyzer/: __init__.py  bottleneck.py  fusion.py  memory.py
helix/benchmark/: __init__.py  runner.py
helix/benchmark/workloads/: __init__.py  diffusion.py  transformer.py
helix/inference/: __init__.py  analyze.py  kvcache.py  serving.py  sweep.py
helix/kernels/: __init__.py  attention.py  attention_triton.py  rmsnorm.py  rope.py
helix/passes/: __init__.py  base.py  checkpoint_advisor.py  fusion_advisor.py  sharding_advisor.py
helix/tracer/: __init__.py  capture.py  graph.py
notebooks/: gpu_benchmark_colab.ipynb
tests/: test_analyzer.py  test_diagnostics.py  test_inference.py  test_kernels.py  test_kernels_triton.py  test_sharding.py  test_tracer.py
