[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "helixir"
version = "0.1.0"
description = "Automatic performance optimizer for JAX programs — traces, analyzes, and advises on XLA-level optimizations"
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "numpy>=1.26",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "websockets>=12.0",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
gpu = ["jax[cuda12]>=0.4.20"]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "httpx>=0.27"]

[project.scripts]
helix = "helix.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["helix"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
